main: v1 기능 설정 완료
